--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -25,7 +25,49 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev.showdoc import *"
+    "from nbdev.showdoc import *\n",
+    "from fastcore.test import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"Say hello to someone\"\n",
+    "    return(f'Hello {to}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello faf'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello('faf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_eq(say_hello('faf'), \"Hello faf\")"
    ]
   },
   {
@@ -38,9 +80,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:fsx_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-fsx_env-py"
   }
  },
  "nbformat": 4,
