--- a/index.ipynb
+++ b/index.ipynb
@@ -7,14 +7,14 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from fafs_hello.core import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Welcome to fafs_hello\n",
     "\n",
     "> Summary description here."
    ]
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install fafs_hello`"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Emi'"
       ]
      },
      "execution_count": null,
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello('Emi')"
    ]
   },
   {
